--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,7 +1,7 @@
 .blog-container {
     border: 1px solid grey;
-    margin: 150px 0;
-    padding: 0 30px;
+    margin: 150px 0 0;
+    padding: 30px 70px;
     background-color: grey;
 }
 
