--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -19,7 +19,7 @@
 .cart-summery {
     background-color: rgb(242, 242, 253);
     height: 85vh;
-    width: 300px;
+    width: 320px;
     position: absolute;
     right: 0;
     padding: 20px;
@@ -74,7 +74,9 @@
 .break-btn-container {
     background-color: rgb(237, 219, 219);
     border-radius: 15px;
-    padding: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     line-height: 10px;
     display: flex;
     justify-content: space-around;
@@ -149,6 +151,37 @@
         position: absolute;
         padding: 20px;
         bottom: 0;
+    }
+
+}
+
+@media only screen and (max-width:688px) {
+    .main-container {
+        /* display: grid;
+        grid-template-columns: repeat(1, 1fr); */
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .exercise-container {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        margin-top: 30px;
+        justify-content: center;
+    }
+
+    .cart-summery {
+        background-color: rgb(242, 242, 253);
+        height: 65vh;
+        width: 320px;
+        position: relative;
+        right: 0;
+        padding: 20px;
+        border-radius: 20px;
+        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
 }
