--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -9,6 +9,7 @@
     gap: 25px;
     margin-top: 30px;
     margin-left: 50px;
+    margin-right: 30px;
 }
 
 .workout-heading {
@@ -19,7 +20,7 @@
 .cart-summery {
     background-color: rgb(242, 242, 253);
     height: 85vh;
-    width: 300px;
+    width: 250px;
     position: absolute;
     right: 0;
     padding: 20px;
@@ -124,13 +125,14 @@
     text-align: center;
     background-color: brown;
     color: white;
-    padding: 12px 12px;
+    padding: 12px 25px;
     margin: 0 10% auto;
     font-size: 17px;
     margin-top: 45px;
     font-weight: 500;
     border-radius: 15px;
     cursor: pointer;
+    border: none;
 }
 
 .activity-btn:hover {
